添加设备区域 及 接口
