# model/device.go
@@ -5,8 +5,9 @@ type Device struct {
 	GatewayId string `json:"gateway_id,omitempty" xorm:"index"`
 	ProductId string `json:"product_id,omitempty" xorm:"index"`
 
+	TypeId  int64 `json:"type_id,omitempty"`               //类型
+	AreaId  int64 `json:"area_id,omitempty" xorm:"index"`  //区域
 	GroupId int64 `json:"group_id,omitempty" xorm:"index"` //分组
-	TypeId  int64 `json:"type_id,omitempty"`
 
 	Name       string             `json:"name"`
 	Desc       string             `json:"desc,omitempty"`
@@ -22,8 +23,16 @@ type DeviceType struct {
 	Created Time   `json:"created,omitempty" xorm:"created"`
 }
 
+type DeviceArea struct {
+	Id      int64  `json:"id"`
+	Name    string `json:"name"`
+	Desc    string `json:"desc,omitempty"`
+	Created Time   `json:"created" xorm:"created"`
+}
+
 type DeviceGroup struct {
 	Id      int64  `json:"id"`
+	AreaId  int64  `json:"area_id" xorm:"index"`
 	Name    string `json:"name"`
 	Desc    string `json:"desc,omitempty"`
 	Created Time   `json:"created" xorm:"created"`
